--- a/src/templates/includes/topnav.html
+++ b/src/templates/includes/topnav.html
@@ -9,6 +9,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+        <a style="color:darkorange" class="nav-link active" aria-current="page" href="#">Basketball</a>
         <a style="color:darkorange" class="nav-link active" aria-current="page" href="#">Soccer</a>
         <a style="color:darkorange" class="nav-link" href="#">More Sports ... </a>
       </div>
