--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,23 +11,23 @@
     <title>JSC Sports Website</title>
   </head>
   <body>
-    {% include 'includes/topnav.html' %}
+    <!-- The navbar should be placed -->
     <br>
     <br>
     <div class="container-lg">
-        {% include 'includes/scores.html' %}
+      {% include 'includes/matches.html' %}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
-    <style>
-      body {
-      background-color: #000022;
-      background-image: url("https://res.cloudinary.com/jimshapedcoding/image/upload/v1628867094/Basketball_Sport_200179_gkllno.png");
-        background-size: 95%;
-        background-position: center;
-        background-repeat: no-repeat;
-      color: white;
-      }
-    </style>
+  <style>
+  body {
+    background-image: url("https://res.cloudinary.com/jimshapedcoding/image/upload/v1628867094/Basketball_Sport_200179_gkllno.png");
+    background-size: 95%;
+    background-position: center;
+    background-repeat: no-repeat;
+	background-color: #000022;
+	color: white;
+  }
+</style>
 </html>
